--- a/public/index.html
+++ b/public/index.html
@@ -24,6 +24,7 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <title>ИП Павлов</title>
+    <base href="/">
   </head>
   <body>
     <div id="root"></div>
